konst/tests/misc_tests/destructure_ui_tests/omit_field_tuple_err.rs
type Tuple = (String, String, String);

const fn to_bar(foo: Tuple) -> String {
    konst::destructure!{(bar) = foo}
    bar
}

const fn to_bar_2(foo: Tuple) -> String {
    konst::destructure!{(bar, ..) = foo}
    bar
}

fn main(){}